--- a/Resume.html
+++ b/Resume.html
@@ -1,39 +1,69 @@
-<HTML>
-<HEAD>
-<TITLE> Christopher Vollick </TITLE>
-</HEAD>
-<BODY>
-<CENTER><H1>Christopher Vollick </H1>
-<H4> University of Waterloo CS student </H4>
-</CENTER>
-<B>Email:</B> cavollic@student.cs.uwaterloo.ca
-<H2> Work Experience </H2>
-<UL>
-<LI> <H3>COMDEV Inc. </H3>
-	<H4>January 2008 - May 2008</H4>
-	<UL>
-	<LI> Maintained a set of software the company uses to engineer their products.</LI>
-	<LI> Added requested features and abilities to that software </LI>
-	<LI> Created various small proof of concept programs for my boss </LI>
-	<LI> Wrote a FORTRAN to MatLab translator. </LI>
-	</UL>
-	<B> Contact:</B> Ming Yu (<A HREF="mailto:ming.yu@comdev.ca">ming.yu@comdev.ca</A>)
-	<BR><BR>
-	<H4>June 2007 - September 2007</H4>
-	<UL>
-	<LI>Wrote a number of libraries to interface various testing equipment with a computer</LI>
-	<LI> Designed and wrote GUIs for controlling the hardware from a computer. </LI>
-	</UL>
-	<B>Contact:</B> Klaus Engel (<A HREF="mailto:klaus.engel@comdev.ca">klaus.engel@comdev.ca</A>)
-</UL>
-<H2> Known Programming Languages </H2>
-<UL>
-<LI> C / C++ </LI>
-<LI> Java </LI>
-<LI> JavaScript </LI>
-<LI> Tcl/ Tk </LI>
-<LI> And others</LI>
-</UL>
-If I needed to learn anything else before the job, I always love an excuse to learn a new language.
-</BODY>
-</HTML>
+<html>
+	<!-- Welcome to the source of my Resume-->
+	<!-- If you can see this you either have a really bad browser or an awesome browser -->
+	<!-- I would put a text editor into the awesome category -->
+	<!-- I would put something that doesn't realize these should be comments into the bad category -->
+	<head>
+		<title> Christopher Vollick's Resume </title>
+	</head>
+	<body>
+		<center> 
+			<h1>Christopher Vollick</h1>
+			<div>University of Waterloo CS Student</div>
+			<div>cavollic@student.cs.uwaterloo.ca</div>
+		</center>
+		<h2> Work Experience </h2>
+		<ul>
+			<li>
+				<h3>Emforium Group: September - December 2008</h3>
+				<ul>
+					<li> Designed and Implemented User Interfaces </li>
+					<li> Wow, four months and this is all I can come up with to put here?</li>
+					<li> I did other things, but nothing's really springing to mind.</li>
+					<!-- I seriously did. -->
+					<!-- I wrote some thing for rendering enumerations pulled from a database, and some other stuff of that ilk, but it all got washed away when we changed directions.-->
+				</ul>
+				Contact: Harmeet Bedi (<a href="mailto:harmeet@emforium.com">harmeet@emforium.com</a>)
+			</li>
+			<li>
+				<h3>COMDEV Inc: January - May 2008</h3>
+				<ul>
+					<li> Maintained a set of software the company uses to engineer their products.</li>
+					<li> Added requested features and abilities to said software.</li>
+					<li> Created various small proof of concept programs for my boss.</li>
+					<li> Wrote a script to convert a FORTRAN program to a MatLab one.</li>
+				</ul>
+				Contact: Ming Yu (<a href="mailto:ming.yu@comdev.ca">ming.yu@comdev.ca</a>)
+			</li>
+		</ul>
+		<h2>Known Programming Languages</h2>
+		<ul>
+			<li> C / C++ </li>
+			<li> Java </li>
+			<!-- To be honest, I'm not so much a fan of Java-->
+			<li> Tcl/Tk </li>
+			<!-- Tcl is my favourite -->
+			<li> Ruby </li>
+			<!-- Ruby's pretty cool too -->
+			<li> JavaScript </li>
+			<li> Basic SQL </li>
+			<li> Does sh count? </li>
+			<!-- Even if it does, I don't use it very often -->
+			<!-- Whenever something comes up that it would be good for, I just use Tcl -->
+			<li> And some more </li>
+			<!-- I knew VB once, but I barely remember those times. -->
+			<!-- RPGCode was one of my first. Those were good times -->
+			<li> And some that I've half learned or still learning </li>
+			<!-- Prolog looks neat. -->
+			<!-- I also need to find a functional language that I don't hate. -->
+			<!-- SML has initial promise. -->
+			<!-- I was immediately smitten by the concept of APL -->
+			<!-- Unfortunately, I don't have a special keyboard. -->
+			<!-- When you aren't using indecipherable characters, some of the magic is lost. -->
+			<!-- Also, a good tutorial for it seemed hard to come by -->
+			<!-- Forth initially intrigued me, but it ended up being to restricted -->
+		</ul>
+
+		If there's anything else I need to know, I could always use an excuse to learn a new language. Or finish learning one, as the case may be.
+	</body>
+</html>
