Added more to Emforium.

--- a/Resume.html
+++ b/Resume.html
@@ -18,10 +18,10 @@
 				<h3>Emforium Group: September - December 2008</h3>
 				<ul>
 					<li> Designed and Implemented User Interfaces </li>
+					<li> Extended OFBiz default behaviour </li>
 					<li> Wow, four months and this is all I can come up with to put here?</li>
 					<li> I did other things, but nothing's really springing to mind.</li>
-					<!-- I seriously did. -->
-					<!-- I wrote some thing for rendering enumerations pulled from a database, and some other stuff of that ilk, but it all got washed away when we changed directions.-->
+					<li> For instance, I wrote an interface whereby I could plug a number of different renderers onto a set of enumerations pulled from a database, but then the company went another direction and all that code was put out of production. Things like that. </li>
 				</ul>
 				Contact: Harmeet Bedi (<a href="mailto:harmeet@emforium.com">harmeet@emforium.com</a>)
 			</li>
