Typo in Forth example. "to" -> "too"

--- a/Resume.html
+++ b/Resume.html
@@ -61,7 +61,7 @@
 			<!-- Unfortunately, I don't have a special keyboard. -->
 			<!-- When you aren't using indecipherable characters, some of the magic is lost. -->
 			<!-- Also, a good tutorial for it seemed hard to come by -->
-			<!-- Forth initially intrigued me, but it ended up being to restricted -->
+			<!-- Forth initially intrigued me, but it ended up being too restricted -->
 		</ul>
 
 		If there's anything else I need to know, I could always use an excuse to learn a new language. Or finish learning one, as the case may be.
