Added HTML and CSS.

--- a/Resume.html
+++ b/Resume.html
@@ -46,6 +46,8 @@
 			<li> Ruby </li>
 			<!-- Ruby's pretty cool too -->
 			<li> JavaScript </li>
+			<li> HTML and CSS</li> 
+			<!-- These aren't really programming languages.-->
 			<li> Basic SQL </li>
 			<li> Does sh count? </li>
 			<!-- Even if it does, I don't use it very often -->
