--- a/Resume.html
+++ b/Resume.html
@@ -1,71 +1,77 @@
-<html>
-	<!-- Welcome to the source of my Resume-->
-	<!-- If you can see this you either have a really bad browser or an awesome browser -->
-	<!-- I would put a text editor into the awesome category -->
-	<!-- I would put something that doesn't realize these should be comments into the bad category -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title> Christopher Vollick's Resume </title>
+		<title> Christopher Vollick </title>
+		<style type="text/css">
+			h1,h2,h3 {
+				margin-bottom: 0mm;
+			}
+			ul {
+				margin-top: 0mm;
+			}
+			h4.jobName {
+				display: inline;
+			}
+			li.job {
+				margin-bottom: 5mm;
+			}
+			td.title {
+				font-weight: bold;
+			}
+			h1.name {
+				display:inline;
+			}
+		</style>
 	</head>
 	<body>
-		<center> 
-			<h1>Christopher Vollick</h1>
-			<div>University of Waterloo CS Student</div>
-			<div>cavollic@student.cs.uwaterloo.ca</div>
-		</center>
-		<h2> Work Experience </h2>
+		<h1 class="name"> Christopher Vollick </h1> (University of Waterloo Computer Science Student)
+		<table>
+			<tr>
+				<td class="title"> Email: </td>
+				<td> cavollic@student.cs.uwaterloo.ca </td>
+			</tr>
+		</table>
+		<h3> Knowledge / Skills </h3>
 		<ul>
-			<li>
-				<h3>Emforium Group: September - December 2008</h3>
-				<ul>
-					<li> Designed and Implemented User Interfaces </li>
-					<li> Extended OFBiz default behaviour </li>
-					<li> Wow, four months and this is all I can come up with to put here?</li>
-					<li> I did other things, but nothing's really springing to mind.</li>
-					<li> For instance, I wrote an interface whereby I could plug a number of different renderers onto a set of enumerations pulled from a database, but then the company went another direction and all that code was put out of production. Things like that. </li>
-				</ul>
-				Contact: Harmeet Bedi (<a href="mailto:harmeet@emforium.com">harmeet@emforium.com</a>)
-			</li>
-			<li>
-				<h3>COMDEV Inc: January - May 2008</h3>
-				<ul>
-					<li> Maintained a set of software the company uses to engineer their products.</li>
-					<li> Added requested features and abilities to said software.</li>
-					<li> Created various small proof of concept programs for my boss.</li>
-					<li> Wrote a script to convert a FORTRAN program to a MatLab one.</li>
-				</ul>
-				Contact: Ming Yu (<a href="mailto:ming.yu@comdev.ca">ming.yu@comdev.ca</a>)
-			</li>
-		</ul>
-		<h2>Known Programming Languages</h2>
-		<ul>
-			<li> C / C++ </li>
+			<li> C / C++</li>
 			<li> Java </li>
-			<!-- To be honest, I'm not so much a fan of Java-->
-			<li> Tcl/Tk </li>
-			<!-- Tcl is my favourite -->
-			<li> Ruby </li>
-			<!-- Ruby's pretty cool too -->
+			<li> HTML / CSS </li>
 			<li> JavaScript </li>
-			<li> HTML and CSS</li> 
-			<!-- These aren't really programming languages.-->
-			<li> Basic SQL </li>
-			<li> Does sh count? </li>
-			<!-- Even if it does, I don't use it very often -->
-			<!-- Whenever something comes up that it would be good for, I just use Tcl -->
-			<li> And some more </li>
-			<!-- I knew VB once, but I barely remember those times. -->
-			<!-- RPGCode was one of my first. Those were good times -->
-			<li> And some that I've half learned or still learning </li>
-			<!-- Prolog looks neat. -->
-			<!-- I also need to find a functional language that I don't hate. -->
-			<!-- SML has initial promise. -->
-			<!-- I was immediately smitten by the concept of APL -->
-			<!-- Unfortunately, I don't have a special keyboard. -->
-			<!-- When you aren't using indecipherable characters, some of the magic is lost. -->
-			<!-- Also, a good tutorial for it seemed hard to come by -->
-			<!-- Forth initially intrigued me, but it ended up being too restricted -->
+			<li> Tcl/Tk </li>
+			<li> Ruby </li>
+			<li> Some basic SQL </li>
+			<li> Some *nix shell </li>
+			<li> I've worked with the Windows system libraries once or twice. </li>
+			<li> I worked with OpenGL a while back. </li>
 		</ul>
-
-		If there's anything else I need to know, I could always use an excuse to learn a new language. Or finish learning one, as the case may be.
+		Also, if there's anything else I should know, I'd be happy to learn it.
+		<h3> Work Experience </h3>
+		<ul>
+			<li class="job">
+				<h4 class="jobName"> Emforium Group </h4>
+				September 2008 - December 2008
+				<ul>
+					<li> Used GWT (Java) and Apache OFBiz to make User Interfaces. </li>
+				</ul>
+			</li>
+			<li class="job"> 
+			 <h4 class="jobName"> COMDEV Inc </h4>
+			 January 2008 - April 2008
+			 <ul>
+				 <li> Maintained and added features to a set of internal software. </li>
+				 <li> Wrote small proof of concept programs for my boss. </li>
+				 <li> Wrote a FORTRAN to MatLab compiler. </li>
+			 </ul>
+		 </li>
+		 <li class="job">
+		 	<h4 class="jobName"> COMDEV Inc </h4>
+			July 2007 - August 2007
+			<ul>
+				<li> Wrote libraries to communicate with test equipment via a serial port. </li> 
+				<li> Wrote a C++ Win32 GUI to control the test equipment, using my library. </li>
+			</ul>
+		 </li>
+		</ul>
 	</body>
 </html>
