Added Contact info to each job.

--- a/Resume.html
+++ b/Resume.html
@@ -54,6 +54,12 @@
 				<ul>
 					<li> Used GWT (Java) and Apache OFBiz to make User Interfaces. </li>
 				</ul>
+				<table>
+					<tr>
+						<td class="title"> Contact: </td>
+						<td> Harmeet Bedi (<a href="mailto:harmeet@emforium.com">harmeet@emforium.com</a>) </td>
+					</tr>
+				</table>
 			</li>
 			<li class="job"> 
 			 <h4 class="jobName"> COMDEV Inc </h4>
@@ -63,6 +69,12 @@
 				 <li> Wrote small proof of concept programs for my boss. </li>
 				 <li> Wrote a FORTRAN to MatLab compiler. </li>
 			 </ul>
+			 <table>
+				 <tr>
+					 <td class="title"> Contact: </td>
+					 <td> Ming Yu (<a href="mailto:ming.yu@comdev.ca">ming.yu@comdev.ca</a>) </td>
+				 </tr>
+			 </table>
 		 </li>
 		 <li class="job">
 		 	<h4 class="jobName"> COMDEV Inc </h4>
@@ -71,6 +83,12 @@
 				<li> Wrote libraries to communicate with test equipment via a serial port. </li> 
 				<li> Wrote a C++ Win32 GUI to control the test equipment, using my library. </li>
 			</ul>
+			<table>
+				<tr>
+					<td class="title"> Contact: </td>
+					<td> Harmeet Bedi (<a href="mailto:klaus.engel@comdev.ca">klaus.engel@comdev.ca</a>) </td>
+				</tr>
+			</table>
 		 </li>
 		</ul>
 	</body>
