Added GiuHub account and real email to resume.

--- a/Resume.html
+++ b/Resume.html
@@ -29,7 +29,15 @@
 		<table>
 			<tr>
 				<td class="title"> Email: </td>
+				<td> psycotica0@gmail.com </td>
+			</tr>
+			<tr>
+				<td class="title"> Email: </td>
 				<td> cavollic@student.cs.uwaterloo.ca </td>
+			</tr>
+			<tr>
+				<td class="title"> Website: </td>
+				<td> The closest thing I have to a website is <a href="http://github.com/psycotica0">my GitHub profile</a>.</td>
 			</tr>
 		</table>
 		<h3> Knowledge / Skills </h3>
