Spelled out GitHub account in full.

--- a/Resume.html
+++ b/Resume.html
@@ -49,7 +49,7 @@
 			<dt> Email </dt>
 			<dd> cavollic@student.cs.uwaterloo.ca </dd>
 			<dt> Website </dt>
-			<dd> The closest thing I have to a website is <a href="http://github.com/psycotica0">my GitHub profile</a>. </dd>
+			<dd> The closest thing I have to a website is my GitHub profile (<a href="http://github.com/psycotica0">http://github.com/psycotica0</a>). </dd>
 		</dl>
 		<h3> Knowledge / Skills </h3>
 		<ul>
