Made my own emails into Links.

--- a/Resume.html
+++ b/Resume.html
@@ -45,9 +45,9 @@
 		<h1 class="name"> Christopher Vollick </h1> (University of Waterloo Computer Science Student)
 		<dl>
 			<dt> Email </dt>
-			<dd> psycotica0@gmail.com </dd>
+			<dd> <a href="mailto:psycotica0@gmail.com"> psycotica0@gmail.com </a> </dd>
 			<dt> Email </dt>
-			<dd> cavollic@student.cs.uwaterloo.ca </dd>
+			<dd> <a href="mailto:cavollic@student.cs.uwaterloo.ca"> cavollic@student.cs.uwaterloo.ca </a> </dd>
 			<dt> Website </dt>
 			<dd> The closest thing I have to a website is my GitHub profile (<a href="http://github.com/psycotica0">http://github.com/psycotica0</a>). </dd>
 		</dl>
