Changed "name" to "fn"
Stephen sugeested it as more common.

--- a/Resume.html
+++ b/Resume.html
@@ -19,7 +19,7 @@
 			td.title {
 				font-weight: bold;
 			}
-			h1.name {
+			h1.fn {
 				display: inline;
 			}
 			dl {
@@ -42,7 +42,7 @@
 		</style>
 	</head>
 	<body>
-		<h1 class="name"> Christopher Vollick </h1> (University of Waterloo Computer Science Student)
+		<h1 class="fn"> Christopher Vollick </h1> (University of Waterloo Computer Science Student)
 		<dl>
 			<dt> Email </dt>
 			<dd> <a href="mailto:psycotica0@gmail.com"> psycotica0@gmail.com </a> </dd>
