Updated and Fixed Resume.

--- a/Resume.html
+++ b/Resume.html
@@ -48,8 +48,11 @@
 			<dd> <a href="mailto:psycotica0@gmail.com"> psycotica0@gmail.com </a> </dd>
 			<dt> Email </dt>
 			<dd> <a href="mailto:cavollic@student.cs.uwaterloo.ca"> cavollic@student.cs.uwaterloo.ca </a> </dd>
+			<dt> Email </dt>
+			<dd> <a href="mailto:0@psycoti.ca"> 0@psycoti.ca </a> </dd>
 			<dt> Website </dt>
-			<dd> The closest thing I have to a website is my GitHub profile (<a href="http://github.com/psycotica0">http://github.com/psycotica0</a>). </dd>
+			<dd> Personal Website: <a href="http://psycoti.ca/0/"> http://psycoti.ca/0/ </a> </dd>
+			<dd> GitHub Profile: <a href="http://github.com/psycotica0">http://github.com/psycotica0</a> </dd>
 		</dl>
 		<h2> Knowledge / Skills </h2>
 		<ul>
@@ -59,19 +62,46 @@
 			<li> JavaScript </li>
 			<li> Tcl/Tk </li>
 			<li> Ruby </li>
-			<li> Some basic SQL </li>
-			<li> Some *nix shell </li>
-			<li> I've worked with the Windows system libraries once or twice. </li>
-			<li> I worked with OpenGL a while back. </li>
+			<li> PHP </li>
+			<li> Basic SQL </li>
+			<li> *nix shell </li>
+			<li> Basic OpenGL </li>
+			<li> I've worked with the Windows system libraries in the past. </li>
 		</ul>
-		Also, if there's anything else I should know, I'd be happy to learn it.
 		<h2> Work Experience </h2>
 		<ul>
+			<li class="job">
+				<h4 class="jobName"> Controlez-Vous / StatusNet </h4>
+				May 2009 - September 2009
+				<ul>
+					<li> Took control of the company's bug tracking software and sorted all of the tickets, removed duplicates, etc. </li>
+					<li> Fixed assorted bugs while I became familiar with the software, and after. </li>
+					<li> Worked on a summer project involving OpenSocial (This was not completed). </li>
+					<li> Worked as the company's Customer Service, interfacing with our users, assisting them with usage of the product, moderating activity on our flagship site (<a href="http://identi.ca">identi.ca</a>).  </li>
+				</ul>
+				September 2009 - January 2010
+				<ul>
+					<li> Worked part time during this term continuing the Customer Service and Support role I had filled for the previous term. </li>
+					<li> Fixed bugs as I encountered them in my support duties. </li>
+				</ul>
+				January 2010 - May 2010
+				<ul>
+					<li> Continued, full time, in my Support role.  </li>
+					<li> As our services and products launched, became slightly more involved in the running of the service.</li>
+					<li> Wrote scripts to automate frequent tasks I and the system administrators would find ourselves doing. </li>
+					<li> Offered support to our Enterprise clients. </li>
+					<li> Continued to fix assorted bugs as I encountered them. </li>
+				</ul>
+				<dl>
+					<dt> Contact </dt>
+					<dd> Evan Prodromou (<a href="mailto:evan@status.net">evan@status.net</a>)</dd>
+				</dl>
+			</li>
 			<li class="job">
 				<h4 class="jobName"> Emforium Group </h4>
 				September 2008 - December 2008
 				<ul>
-					<li> Used GWT (Java) and Apache OFBiz to make User Interfaces. </li>
+					<li> Used GWT (Java) and Apache OFBiz to make User Interfaces for a Point Of Sale and Inventory Management system. </li>
 				</ul>
 				<dl>
 					<dt> Contact </dt>
@@ -82,9 +112,9 @@
 			 <h4 class="jobName"> COMDEV Inc </h4>
 			 January 2008 - April 2008
 			 <ul>
-				 <li> Maintained and added features to a set of internal software. </li>
+				 <li> Maintained and added features to a set of internal software (Tcl/Tk). </li>
 				 <li> Wrote small proof of concept programs for my boss. </li>
-				 <li> Wrote a FORTRAN to MatLab compiler. </li>
+				 <li> Wrote a FORTRAN to MatLab translator. </li>
 			 </ul>
 			 <dl>
 				 <dt> Contact </dt>
@@ -95,7 +125,7 @@
 		 	<h4 class="jobName"> COMDEV Inc </h4>
 			July 2007 - August 2007
 			<ul>
-				<li> Wrote libraries to communicate with test equipment via a serial port. </li> 
+				<li> Wrote libraries to communicate with test equipment via a serial port (C++). </li> 
 				<li> Wrote a C++ Win32 GUI to control the test equipment, using my library. </li>
 			</ul>
 			<dl>
