--- a/Resume.html
+++ b/Resume.html
@@ -42,41 +42,46 @@
 		</style>
 	</head>
 	<body>
-		<h1 class="fn"> Christopher Vollick </h1> (University of Waterloo Computer Science Student)
+		<h1 class="fn"> Christopher Vollick </h1>
 		<dl>
 			<dt> Email </dt>
 			<dd> <a href="mailto:psycotica0@gmail.com"> psycotica0@gmail.com </a> </dd>
 			<dt> Email </dt>
-			<dd> <a href="mailto:cavollic@student.cs.uwaterloo.ca"> cavollic@student.cs.uwaterloo.ca </a> </dd>
-			<dt> Email </dt>
 			<dd> <a href="mailto:0@psycoti.ca"> 0@psycoti.ca </a> </dd>
+			<dt> Email </dt>
+			<dd> <a href="mailto:christopher@vollick.ca"> christopher@vollick.ca </a> </dd>
 			<dt> Website </dt>
 			<dd> Personal Website: <a href="http://psycoti.ca/0/"> http://psycoti.ca/0/ </a> </dd>
 			<dd> GitHub Profile: <a href="http://github.com/psycotica0">http://github.com/psycotica0</a> </dd>
 		</dl>
 		<h2> Knowledge / Skills </h2>
 		<ul>
-			<li> C / C++</li>
+			<li> C </li>
+			<li> C++ </li>
 			<li> Java </li>
 			<li> HTML / CSS </li>
 			<li> JavaScript </li>
 			<li> Tcl/Tk </li>
 			<li> Ruby </li>
 			<li> PHP </li>
-			<li> Basic SQL </li>
+			<li> Smalltalk </li>
+			<li> SQL </li>
 			<li> *nix shell </li>
 			<li> Basic OpenGL </li>
-			<li> I've worked with the Windows system libraries in the past. </li>
 		</ul>
 		<h2> Work Experience </h2>
 		<ul>
 			<li class="job">
+				<h4 class="jobName"> Raytheon Waterloo </h4>
+				October 2010 - August 2011, December 2011 - May 2012
+				<ul>
+					<li> Fixed bugs and added features on upcoming products in C and Smalltalk </li>
+				</ul>
 				<h4 class="jobName"> Controlez-Vous / StatusNet </h4>
 				May 2009 - September 2009
 				<ul>
 					<li> Took control of the company's bug tracking software and sorted all of the tickets, removed duplicates, etc. </li>
 					<li> Fixed assorted bugs while I became familiar with the software, and after. </li>
-					<li> Worked on a summer project involving OpenSocial (This was not completed). </li>
 					<li> Worked as the company's Customer Service, interfacing with our users, assisting them with usage of the product, moderating activity on our flagship site (<a href="http://identi.ca">identi.ca</a>).  </li>
 				</ul>
 				September 2009 - January 2010
